discussion/kv_engine/187490/187490_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

RangeScan rejig.

Moving the connection IO to frontend.

Currently no one is setting a continue back to idle as the currentStatus
is overloaded

success means new command but should mean go again.
range_scan_more should mean continue done.

Maybe needs cookie.

Change-Id: I17566daa37700a4caaf1f85152a4185929b29cf0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-03-17 16:29:41.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-17 17:22:03.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52431/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1505): fatal error C1021: invalid preprocessor command "warning" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52431/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43979/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43979/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22968/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<ScannedData, std::mutex> scannedData;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:111:28: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
                       cb::engine_errc currentStatus)
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:140:9: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
    cb::engine_errc currentStatus{cb::engine_errc::success};
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22968/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22968/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12781/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12781/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1775/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1775/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12700/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12700/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25497/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25497/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26348/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26348/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25035/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25035/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33450/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33450/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24620/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24620/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23243/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
